# vst-scanner

./: .gitignore  CMakeLists.txt  INSTALL_DEVELOPMENT.md  README.md  distribute_vst_scanner.ps1  example_usage.md  scan_vst.bat  scan_vst.ps1  scan_vst.sh  vst_scanner.cpp
vst3sdk/: .gitmodules
vst3sdk/public.sdk/: CMakeLists.txt
vst_scanner_portable/: README.md  scan_vst_simple.bat  scan_vst_simple.ps1
